--- a/AudioEditor-FrontEnd/public/assets/styles/home.css
+++ b/AudioEditor-FrontEnd/public/assets/styles/home.css
@@ -1,57 +1,23 @@
 body {
   margin: 0;
-  font-family: "Montserrat", sans-serif;
   color: white;
-  background-color: black;
+  background-image: url('../images/background.jpg');font-size: 20px;
+  background-size:cover;
+  /* background-color:cornflowerblue; */
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 500;
+  font-size: 0.875rem;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
 }
 
-section {
-  height: 950px;
+main {
+  min-height: 950px;
 }
 
 a {
-  color: #9552ff;
+  color: #4c00c5;
   text-decoration: none;
-}
-
-section {
-  background-color: black;
-}
-
-footer {
-  color:black;
-  text-align: left;
-  padding: 20px;
-  background-color:#9552ff;
-}
-
-nav {
-  margin-bottom: 0;
-  text-align: center;
-  background-color: rgb(0, 0, 0);
-}
-
-nav ul {
-  text-align: left;
-  margin: 0;
-  padding: 10px 0;
-  background-color: #9552ff;
-}
-
-nav ul li {
-  display: inline-block;
-}
-
-nav ul li a {
-  display: block;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: rgb(0, 0, 0);
-}
-
-nav ul li a:hover {
-  text-decoration: none;
-  color: white;
 }
 
 #welcomePage h2 {
@@ -59,7 +25,7 @@ nav ul li a:hover {
   padding: 20px 0;
   font-size: 50px;
   text-align: center;
-  color: #9552ff;
+  color: #4c00c5;
 }
 
 #welcomePage h1 {
@@ -67,12 +33,12 @@ nav ul li a:hover {
   font-style: italic;
   font-size: 100px;
   text-align: center;
-  color: #9552ff;
-  text-shadow: 4px 4px 2px #6607ff;
+  color: #4c00c5;
+  text-shadow: 4px 4px 2px #2d0174;
 }
 
 #welcomePage p {
-  color: #9552ff;
+  color: #4c00c5;
   margin: 50px;
 }
 
@@ -85,4 +51,10 @@ nav ul li a:hover {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+footer {
+  color: black;
+  text-align: left;
+  background-color: #4c00c5;
 }
