--- a/AudioShare-FrontEnd/public/assets/styles/style.css
+++ b/AudioShare-FrontEnd/public/assets/styles/style.css
@@ -1,3 +1,21 @@
-@import "yourAudioFiles.css";
-@import "home.css";
-@import "upload.css";
+body {
+    margin: 0;
+    color: white;
+    background-image: url('../images/background.jpg');
+    background-size: cover;
+    background-color: black;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
+    font-size: 0.875rem;
+    letter-spacing: 0.02857em;
+    max-width: 1920px;
+    text-align: center;
+}
+
+main {
+    min-height: 950px;
+}
+
+a {
+    text-decoration: none;
+}
