--- a/AudioShare-FrontEnd/public/assets/styles/style.css
+++ b/AudioShare-FrontEnd/public/assets/styles/style.css
@@ -2,14 +2,16 @@ body {
     margin: 0;
     color: white;
     background-image: url('../images/background.jpg');
+    /* background-color: white; */
+    background-repeat: no-repeat;
     background-size: cover;
-    background-color: black;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
     font-weight: 500;
     font-size: 0.875rem;
     letter-spacing: 0.02857em;
     max-width: 1920px;
     text-align: center;
+    background-attachment: fixed;
 }
 
 main {
